--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <p class="description">Welcome to this wonderful site</p>
 
                 <div class="buttons">
-                    <a href="#" class="button book now">Book Now</a>
-                    <a href="#" class="button contact-us">Contact us</a>
+                    <a href="#contact" class="button book now">Book Now</a>
+                    <a href="#contact" class="button contact-us">Contact us</a>
                 </div>
             </div>
             <div class="hero-image-wrapper">
