--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <div class="buttons">
                     <a href="#contact" class="button book now">Book Now</a>
-                    <a href="#contact" class="button contact-us">Contact us</a>
+                    <!--<a href="#contact" class="button contact-us">Contact us</a> -->
                 </div>
             </div>
             <div class="hero-image-wrapper">
