--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <nav class="navbar section-content">
         <a href="#" class="nav-logo">
-            <h2 class="logo-text">Just Java 🐾</h2>
+            <h2 class="logo-text">Just Java ☕</h2>
         </a>
         <ul class="nav-menu">
             <button id="menu-close-button" class="fas fa-times"></button>
