--- a/index.html
+++ b/index.html
@@ -198,22 +198,22 @@
                     <p> 123 Keating Way, Cape Gaurd, 7975</p>
                 </li> <li class="contact-info">
                     <i class="fa-regular fa-envelope"></i>
-                    <p>web@gmail.insure</p>
+                    <p>web@gmail.com</p>
                 </li> <li class="contact-info">
                     <i class="fa-solid fa-phone"></i>
                     <p> 0217830273</p>
                 </li> <li class="contact-info">
                     <i class="fa-regular fa-clock"></i>
-                    <p>Mnday ~ Friday: 9:00 AM ~ 5:00 PM </p>
+                    <p>Monday ~ Friday: 9:00 AM ~ 5:00 PM </p>
                 </li></li> <li class="contact-info">
                     <i class="fa-regular fa-clock"></i>
                     <p>Saturday: 9:00 AM ~ 5:00 PM </p>
                 </li> <li class="contact-info">
                     <i class="fa-regular fa-clock"></i>
-                    <p>Sunday: clsed</p>
+                    <p>Sunday: closed</p>
                 </li> <li class="contact-info">
                     <i class="fa-solid fa-globe"></i>
-                    <p> www.Java.za</p>
+                    <p> www.Java.co.za</p>
                 </li>
             </ul>
             <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
