--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <input type="text" name="nummber" placeholder="Contact number" class="form-input" required>
                 <input type="email" name="email" placeholder="Email" class="form-input" required>
                 <textarea name= "message" placeholder="Message" class="form-input" required></textarea>
-                <button class="submit-button">Send</button>
+                <button class="submit-button">Submit</button>
             </form>
         </div>
         
