--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                     <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#" class="social-link"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="social-link"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
                 <p class="policy-text">
                     <a href="#" class="policy-link"> Privacy Policy</a>
